2006-02-19  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/at91_serial.c (at91_serial_lookup): Enable the peripheral
	clock at lookup time to keep the power usage low.

2004-11-10  Sebastian Block <sebastianblock@gmx.net>

        * src/at91_serial.c: Added third port
        
2004-01-26  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/at91_serial.c (at91_serial_getc_polled) 
	* src/ay91_serial.c (at91_serial_putc_polled):
	Only define these functions if polled IO is configured so
	avoiding compiler warnings.

2004-01-16  Thomas Koeller  <thomas.koeller@baslerweb.com>

	* src/at91_serial.c: If both a transmitter and a receiver
	interrupt arrive at the same time, process the receiver
	interrupt first.

2003-11-21  Thomas Koeller  <thomas.koeller@baslerweb.com>

	* src/at91_serial.c: Fix endless loop that would occur if
	high-level driver was not ready to accept data received.

2003-11-07  Thomas Koeller  <thomas.koeller@baslerweb.com>

	* src/at91_serial.c:
	* cdl/ser_arm_at91.cdl: Major rewrite to achieve reliable
	operation at higher baud rates.

2003-10-16  Nick Garnett  <nickg@balti.calivar.com>

	* src/at91_serial.c (at91_serial_config_port): Added update of
	channel configuration, which was missing.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/ser_arm_at91.cdl: Remove irrelevant doc link.

2001-09-20  Jesper Skov  <jskov@redhat.com>

	* src/at91_serial.c (at91_serial_init): Use valid interrupt priority.

2001-09-10  Jonathan Larmour  <jlarmour@redhat.com>

        * cdl/ser_arm_at91.cdl:        
        Fix 234000->230400 typo.

2001-08-14  Jonathan Larmour  <jlarmour@redhat.com>

	* src/at91_serial.c (at91_serial_stop_xmit): Write to IDR, not IER.
	(at91_serial_ISR): Return CYG_ISR_HANDLED.

2001-07-24  Gary Thomas  <gthomas@redhat.com>

	* src/at91_serial.h: 
	* src/at91_serial.c: 
	* cdl/ser_arm_at91.cdl: New file(s) - initial package.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####